# toggle-dark-light

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.rtf  LICENSE.txt  Makefile  README.md  build-installer.cmd  build.cmd  test.cmd  toggle.c  toggle.exe.manifest  toggle.rc  toggle.wixproj  toggle.wxs  update-docs.cmd  vc.bat
docs/: index.html
